@@ -45,9 +45,38 @@ class CLdapAuthValidator extends CValidator {
 	 * @return bool
 	 */
 	public function validate($value) {
-		$ldap = new CLdap($this->conf);
-		$ldap->connect();
+		$status = false;
 
-		return $ldap->checkPass($value['user'], $value['password']);
+		$ldap = new CLdap($this->conf);
+
+		$status = $ldap->checkPass($value['user'], $value['password']);
+
+		if (!$status) {
+			$this->setError($ldap->error);
+		}
+
+		return $status;
+	}
+
+	/**
+	 * Return error message.
+	 *
+	 * @return string
+	 */
+	public function getError() {
+		$error = parent::getError();
+		$messages = [
+			CLdap::ERR_PHP_EXTENSION => _('PHP LDAP extension missing.'),
+			CLdap::ERR_SERVER_UNAVAILABLE => _('Cannot connect to LDAP server.'),
+			CLdap::ERR_BIND_FAILED => _('Cannot bind to LDAP server.'),
+			CLdap::ERR_BIND_ANON_FAILED => _('Cannot bind anonymously to LDAP server.'),
+			CLdap::ERR_USER_NOT_FOUND => _('Login name or password is incorrect.'),
+			CLdap::ERR_OPT_PROTOCOL_FAILED => _('Setting LDAP protocol failed.'),
+			CLdap::ERR_OPT_TLS_FAILED => _('Starting TLS failed.'),
+			CLdap::ERR_OPT_REFERRALS_FAILED => _('Setting LDAP referrals to "Off" failed.'),
+			CLdap::ERR_OPT_DEREF_FAILED => _('Setting LDAP dereferencing mode failed.')
+		];
+
+		return array_key_exists($error, $messages) ? $messages[$error] : '';
 	}
 }
