@@ -3,6 +3,7 @@ Changes for 4.0.3rc1
 New features:
 
 Bug fixes:
+A.F....... [ZBX-14880] fixed misleading ldap authentication error messages (gcalenko)
 ..F....... [ZBX-14877] fixed style of disabled action on high contrast theme (Andzs, ashubin)
 ..F....... [ZBX-14606] removed strict-transport-security header from frontend (miks)
 ..F....... [ZBX-15020] fixed negative time selector offset when selecting time range in graph (miks)
